<resources>
    <string name="app_name">MyBookLibrary</string>
    <string name="title_book_detail">Book Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_book_list_view">BookListViewActivity</string>

    <string name="library">Library</string>
    <string name="wishlist">Wishlist</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_out">Sign out</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="label_cover">Cover</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_authors">Author(s)</string>
    <string name="label_publisher">Publisher</string>
    <string name="label_published_date">Published date</string>

    <string name="remove">Remove</string>

    <string name="no_item_found">No item found</string>

    <string name="add_to_lib">Add to lib</string>
</resources>
