<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/list_item_spacing_half"
    android:paddingTop="@dimen/list_item_spacing_half"
    tools:context="com.leplus.mybooklibrary.NewbookDialogFragment"
    tools:listitem="@layout/fragment_newbook_dialog_item" />-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.leplus.mybooklibrary.NewbookDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:layout_marginRight="6dip" />

        <TextView
            android:id="@+id/book_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_library"
            android:contentDescription="@string/add_to_lib"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_lib" />

        <Button
            android:id="@+id/button_add_wishlist"
            android:contentDescription="@string/wishlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wishlist" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cacaca"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/book_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_description" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/title_book_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_authors" />

            <TextView
                android:id="@+id/book_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

